--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "videogames_api",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node ./dist/server.js",
     "dev": "nodemon ./src/server.js",
@@ -12,7 +13,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.19.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
